--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       # Step 4: Run Semantic Release
       - name: Run Semantic Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # GitHub token for authentication
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # GitHub token for authentication
         run: npx semantic-release
 
   build-and-push:
