--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,42 +3,54 @@ name: Release and Push Docker Image
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch (or your default branch)
+      - main
 
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      # Step 1: Checkout the repository code
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Ensures full history for semantic-release
+          fetch-depth: 0
 
-      # Step 2: Set up Node.js with the correct version (Node.js >=20.8.1)
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Node.js 22
+        uses: actions/setup-node@v4
         with:
-          node-version: '20.x'  # Ensure you're using Node.js 20 or higher
+          node-version: 22
 
-      # Step 3: Install dependencies (including semantic-release and plugins)
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
 
-      # Step 4: Run Semantic Release
+      - name: Set execute permission for semantic-release
+        run: chmod +x node_modules/.bin/semantic-release
+
       - name: Run Semantic Release
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}  # GitHub token for authentication
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: npx semantic-release
 
+      - name: Debug - Check Git Tags After Release
+        run: git tag --list | tail -5
+
   build-and-push:
-    needs: release  # Ensures that this step runs only after the release step completes
+    needs: release
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Debug - List Files
+        run: ls -la
+
+      - name: Debug - Check package.json
+        run: cat package.json || echo "package.json not found!"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -49,12 +61,17 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract Version from Package.json
+      - name: Extract Version from Git Tags
         id: get_version
-        run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+        run: echo "VERSION=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+
+      - name: Debug - Show Extracted Version
+        run: echo "Exracted Version:${{ env.VERSION }}"
+      
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/node-app:${{ env.VERSION }} -t ${{ secrets.DOCKERHUB_USERNAME }}/node-app:latest .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/node-app:${{ env.VERSION }} \
+                       -t ${{ secrets.DOCKERHUB_USERNAME }}/node-app:latest -f ./Dockerfile .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/node-app:${{ env.VERSION }}
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/node-app:latest
