--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Debug - List Git Tags
+        run: git tag --list | tail -5
+
       - name: Debug - List Files
         run: ls -la
 
@@ -63,13 +66,15 @@ jobs:
 
       - name: Extract Version from Git Tags
         id: get_version
-        run: echo "VERSION=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+        run: |
+          VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "latest")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Debug - Show Extracted Version
-        run: echo "Exracted Version:${{ env.VERSION }}"
-      
+        run: echo "Extracted Version: ${{ env.VERSION }}"
 
       - name: Build and Push Docker Image
+        if: env.VERSION != 'latest'
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/node-app:${{ env.VERSION }} \
                        -t ${{ secrets.DOCKERHUB_USERNAME }}/node-app:latest -f ./Dockerfile .
